update counters, toggle, new todo not working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Todolist</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -32,7 +34,7 @@
     </div>
   </div>
 
-  <script src="script.js">
+  <script>
   </script>
 </body>
 </html>
